# RFC-Shared-Agent-Scaffolding

./: .bootstrap.toml  .flake8  .gitignore  .markdownlint-cli2.jsonc  .perlcriticrc  .prettierrc.json  .yamllint  =10.0  ALLOWED_DRIFT.md  CLAUDE.md  CONTRIBUTING.md  EPIC-3-M0-SUMMARY.md  EPIC-3-UPDATE.md  EPIC-33-FINAL-COMPLETION-SUMMARY.md  EPIC-59-NEXT-STEPS.md  EPIC-COMPLETION-SUMMARY.md  FUTURE-WORK-VERIFICATION-REPORT.md  HOW-TO-USE-THIS-TOOL.md  KNOWN-ISSUES.md  M0-DECISIONS.md  M1-P2-I1-STATUS.md  M1-P3-I1-DECISION.md  M2-P2-I1-DRIFT-DETECTION.md  Makefile  PR-62-CI-FAILURE-PROMPT.md  PR1-RUST-SCAFFOLDING-COMPLETE.md  PR3-SAFE-RUN-IMPLEMENTATION-COMPLETE.md  README.md  REPO-LINT-USER-MANUAL.md  RFC-Shared-Agent-Scaffolding-v0.1.0.md  RUST-CANONICAL-TOOL-TODO.md  black.diff  black.diff.md  fixtures-reset.diff  i-am-copilot-and-i-am-a-stupid-fucking-ai-and-this-is-why.md  pyproject.toml  rfc-shared-agent-scaffolding-v0.1.0.md  taplo.toml  test_violations.py
.bootstrap/: activate.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: multi-phase-form.yml
.github/workflows/: build-rust-bootstrapper.yml  conformance.yml  copilot-setup-steps.yml  docstring-contract.yml  docstring-contract.yml.disabled  drift-detection.yml  lint-and-format-checker.yml  lint-and-format-checker.yml.disabled  naming-enforcement.yml  naming-kebab-case.yml  no-autoclose-keywords.yml  normalize-pr-body.yml  phase3-windows-ctrlc-probe.yml  pr-body-guardrails  pr-body-guardrails.yml  repo-lint-and-docstring-enforcement.yml  repo-lint-weekly-full-scan.yml  rust-conformance.yml  structure-validation.yml  test-bash.yml  test-bootstrapper.yml  test-perl.yml  test-powershell.yml  test-python3.yml  yaml-lint.yml
RFC-Shared-Agent-Scaffolding-Example/: CLAUDE.md
conformance/: README.md  vectors.json
conformance/repo-lint/: README.md  autofix-policy.json  repo-lint-docstring-rules.yaml  repo-lint-file-patterns.yaml  repo-lint-linting-rules.yaml  repo-lint-naming-rules.yaml  repo-lint-ui-theme.yaml
conformance/repo_lint/: README.md  autofix_policy.json
docs/: FUTURE-WORK.md  README.md  RUST_BOOTSTRAPPER_MIGRATION_GUIDE.md  conformance-contract.md  copilot-prompt-2-repo-lint-epic.md  copilot-prompt-3.md  epic-repo-lint-copilot-prompt.md  epic-repo-lint-status.md  future-work.md  phase3-windows-ctrlc-probe.md  repo-cli-bootstrapper.md  rust-bootstrapper-dev-guide.md  rust-bootstrapper-manual.md  rust-bootstrapper-migration-guide.md  rust-canonical-tool.md  wrapper-discovery.md
docs/ai-prompt/: 110-next-steps.md
docs/architecture/: canonical-structure.md  contract-extraction.md  risk-vector-enumeration.md  rust-canonical-tool.md  wrapper-discovery.md
docs/contributing/: ai-constraints.md  allowed-drift.md  contributing-guide.md  json-jsonc-contracts.md  markdown-contracts.md  naming-and-style.md  python-exception-handling-policy.md  python-typing-policy.md  session-compliance-requirements.md  toml-contracts.md
docs/docstrings/: EPIC-TRACKING.md  EXIT_CODES_CONTRACT.md  FUTURE_VALIDATION.md  README.md  bash.md  c.md  cpp.md  csharp.md  epic-tracking.md  javascript.md  malbolge.md  perl.md  powershell.md  python.md  ruby.md  rust.md  typescript.md  yaml.md
docs/history/: README.md  epic-3-final-summary.md  epic-3-m0-summary.md  epic-3-update.md  epic-33-final-completion-summary.md  epic-33-rust-canonical-tool-completion.md  epic-33-verification-summary.md  epic-59-next-steps.md  epic-completion-summary.md  future-work-verification-report.md  (+19 more)
documents/: CANONICAL-STRUCTURE.md  ChatSummary.md  ci-validation-checklist.md  conformance-tests.md  contract-extraction.md  final-summary.md  instrumentation-evidence.md
repo-lint-failure-reports/: summary-20251230-013731.md  summary-20251230-015239.md  summary-20251230-022203.md  summary-20251230-022446.md  summary-20251230-023327.md  summary-20251230-033850.md  summary-20251230-035748.md  summary-20251230-040634.md  summary-20251230-040719.md  summary-20251230-042638.md  summary-20251230-043227.md
repo_lint.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/bootstrap-repo-cli/: Cargo.toml
rust/crates/bootstrap-repo-cli/src/: checkpoint.rs  cli.rs  config.rs  context.rs  doctor.rs  errors.rs  executor.rs  installer.rs  lib.rs  lock.rs  main.rs  package_manager.rs  plan.rs  platform.rs  progress.rs  retry.rs
rust/crates/bootstrap-repo-cli/src/installers/: actionlint.rs  mod.rs  perl_tools.rs  powershell_tools.rs  python_tools.rs  repo_lint.rs  ripgrep.rs  shellcheck.rs  shfmt.rs
rust/crates/bootstrap-repo-cli/tests/: integration_tests.rs  parity_tests.rs
rust/crates/safe-run/: Cargo.toml
rust/crates/safe-run/src/: cli.rs  safe_run.rs
rust/crates/safe-run/tests/: README.md  conformance-infrastructure.md
rust/crates/safe-run/tests/common/: mod.rs
rust/crates/safe-run/tests/fixtures/: README.md
rust/crates/safe-run/tests/snapshots/: README.md
rust/src/: bootstrap.rs  bootstrap_main.rs  cli.rs  lib.rs  main.rs  safe_archive.rs  safe_run.rs
rust/src/bootstrap_v2/: activate.rs  checkpoint.rs  cli.rs  config.rs  context.rs  doctor.rs  errors.rs  executor.rs  exit_codes.rs  installer.rs  lock.rs  mod.rs  package_manager.rs  plan.rs  platform.rs  progress.rs  retry.rs
rust/src/bootstrap_v2/installers/: actionlint.rs  mod.rs  perl_tools.rs  powershell_tools.rs  python_tools.rs  repo_lint.rs  ripgrep.rs  shellcheck.rs  shfmt.rs
rust/tests/: CONFORMANCE_INFRASTRUCTURE.md  bootstrap_tests.rs  conformance.rs  integration_tests.rs
rust/tests/common/: mod.rs  snapshots.rs
scripts/: add_future_annotations.py  benchmark-bootstrap.sh  bootstrap-repo-cli.sh  bootstrap-repo-lint-toolchain.sh  bootstrap-watch.py  bootstrap-wrapper.sh  bootstrap_watch.py  fix_md013_line_length.py  fix_md013_line_length_option_a.py  fix_md013_line_length_option_b.py  run-linters.sh  session-end.sh  session-start.sh  validate-docstrings.py  validate-structure.sh  validate_docstrings.py  verify-repo-references.sh
tests/: test_fixture_vector_mode.py
tools/: __init__.py
wrappers/: README.md
(+970 files in other folders)
