[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_lint"
version = "0.1.0"
description = "Unified multi-language lint and docstring validation tool"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "click>=8.0",
    "rich>=10.0",
    "rich-click>=1.6.0",
    "pytest>=7.0.0",
]

[project.scripts]
repo-lint = "tools.repo_lint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest>=7.0.0",
]

# Docstring validation dependencies
# tree-sitter and tree-sitter-bash for structure-aware Bash parsing
docstring = [
    "tree-sitter>=0.20.0,<0.30.0",
    "tree-sitter-bash>=0.20.0,<0.30.0",
]

# Linting tool dependencies (pinned per Phase 0 Item 0.9.6)
# These are the Python-based linting tools used by repo_lint
lint = [
    "black==24.10.0",
    "ruff==0.8.4",
    "pylint==3.3.2",
    "yamllint==1.35.1",
]

[tool.black]
line-length = 120
target-version = ['py38']
# Exclude test fixtures with intentional violations
exclude = '''
/(
    \.git
  | \.venv
  | \.venv-lint
  | dist
  | conformance/repo-lint/fixtures/violations
  | conformance/repo-lint/vectors/fixtures
  | scripts/tests/fixtures
)/
'''

[tool.ruff]
# Match line length with Black
line-length = 120

# Target Python 3.8+ (matching Black target-version)
target-version = "py38"

# Exclude test fixtures with intentional violations
exclude = [
    ".git",
    ".venv",
    ".venv-lint",
    "dist",
    "conformance/repo-lint/fixtures/violations",
    "conformance/repo-lint/vectors/fixtures",
    "scripts/tests/fixtures",
]

[tool.ruff.lint]
# Select default rules plus additional checks
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
"I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
[tool.pylint.format]
max-line-length = 120

[tool.pylint.master]
# Add repository root to sys.path to allow imports of tools.repo_lint
init-hook = 'import sys; sys.path.insert(0, ".")'
# Ignore test fixtures with intentional violations
ignore-paths = [
    "conformance/repo-lint/fixtures/violations/.*",
    "conformance/repo-lint/vectors/fixtures/.*",
    "scripts/tests/fixtures/.*",
]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "too-few-public-methods",
    "too-many-return-statements",
    "no-else-return",
    "global-statement",
    "unused-argument",
    "import-outside-toplevel",
    "broad-exception-caught",
    "consider-using-with",
    "subprocess-run-check",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "inconsistent-return-statements",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements"
]

[tool.pylint.typecheck]
# Ignore imports that are optional test dependencies
ignored-modules = ["pytest"]
