[package]
name = "safe-run"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["RFC-Shared-Agent-Scaffolding Contributors"]
description = "Canonical implementation of the safe-run/safe-check/safe-archive contract"
license = "Unlicense"
repository = "https://github.com/M1NDN1NJ4-0RG/RFC-Shared-Agent-Scaffolding"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.0"
signal-hook = "0.3"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
zip = "0.6"
# Rust migration dependencies
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
toml = "0.8"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
futures = "0.3"
petgraph = "0.6"
async-trait = "0.1"
rand = "0.8"
atty = "0.2"
dirs = "5.0"
semver = "1.0"
num_cpus = "1.16"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
once_cell = "1.19"

[[bin]]
name = "safe-run"
path = "src/main.rs"

[[bin]]
name = "bootstrap-repo-cli"
path = "src/bootstrap_main.rs"
