[package]
  name = "bootstrap-repo-cli"
  version = "0.1.1"
  edition = "2021"
  rust-version = "1.70"
  authors = [ "RFC-Shared-Agent-Scaffolding Contributors" ]
  description = "Modular toolchain bootstrapper for RFC-Shared-Agent-Scaffolding"
  license = "Unlicense"
  repository = "https://github.com/M1NDN1NJ4-0RG/RFC-Shared-Agent-Scaffolding"

[dependencies]
  clap = { version = "4.5", features = [ "derive", "env" ] }
  serde = { version = "1.0", features = [ "derive" ] }
  serde_json = "1.0"
  chrono = { version = "0.4", features = [ "serde" ] }
  tokio = { version = "1.41", features = [ "full" ] }
  anyhow = "1.0"
  thiserror = "2.0"
  toml = "0.8"
  indicatif = "0.17"
  reqwest = { version = "0.12", features = [ "rustls-tls", "json" ], default-features = false }
  futures = "0.3"
  petgraph = "0.6"
  async-trait = "0.1"
  rand = "0.8"
  atty = "0.2"
  dirs = "5.0"
  semver = "1.0"
  num_cpus = "1.16"
  once_cell = "1.19"
  regex = "1.0"

[dev-dependencies]
  tempfile = "3.10"

[[bin]]
  name = "bootstrap-repo-cli"
  path = "src/main.rs"
